reactor 重构网关，降低网关使用复杂度